<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/resultsBackgroundColour"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resultTitleText"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/right"
        android:layout_width="276dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/correctColour"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/resultRightText"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wrong"
        android:layout_width="272dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/wrongColour"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/resultWrongText"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tryAgain"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/resultsTryAgainColour"
        android:text="@string/resultTryAgainButtonText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/topics"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/resultsBackToTopicsColour"
        android:text="@string/resultBackToTopicsButtonText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menu"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/resultsBackToMenuColour"
        android:text="@string/resultBackToMenuButtonText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>