<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/instructionsBackgroundColour"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructionsTitleText"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/instructionsTitleText"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructionsInstructionsText"
        android:layout_width="314dp"
        android:layout_height="283dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal"
        android:text="@string/instructionsInstructionText"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/instructionsGoodLuckText"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal"
        android:padding="0dp"
        android:text="@string/instructionsGoodLuckText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/instructionsBackButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/instructionsBackColour"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/backButtonText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>