<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quizBackgroundColour">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="154dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/quizQuestionText"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/correctColour"
        android:text="@string/quizOption1"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/wrongColour"
        android:text="@string/quizOption2"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/wrongColour"
        android:text="@string/quizOption3"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button12"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/wrongColour"
        android:text="@string/quizOption4"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

</androidx.constraintlayout.widget.ConstraintLayout>