<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quizBackgroundColour">

    <TextView
        android:id="@+id/quizQuestionText"
        android:layout_width="360dp"
        android:layout_height="154dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/quizQuestionText"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizOption1Button"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="@color/generalCorrectColour"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/quizOption1"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizOption2Button"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/generalWrongColour"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/quizOption2"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizOption3Button"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/generalWrongColour"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/quizOption3"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizOption1Button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/quizOption4Button"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/generalWrongColour"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/quizOption4"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizOption2Button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>