<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/topicBackgroundColour">

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/topicTopicColour"
        android:text="@string/topicButtonText1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/topicTopicColour"
        android:text="@string/topicButtonText2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/topicTopicColour"
        android:text="@string/topicButtonText3"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/topicTopicColour"
        android:text="@string/topicButtonText4"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/backButtonText"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:backgroundTint="@color/topicBackColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.205" />
</androidx.constraintlayout.widget.ConstraintLayout>