<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleBackgroundColour">

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="131dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="@string/titleScreenText"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/startButtonText"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        app:backgroundTint="@color/startButtonColour"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/instructionButtonText"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        app:backgroundTint="@color/instructionButtonColour"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:text="@string/settingsButtonText"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        app:backgroundTint="@color/settingsButtonColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>